# douyin-feishu-watcher

./: .env.example  .gitignore  README.md  creators.json.example  local.runtime.json.example  main.py  pyproject.toml
.github/workflows/: release-bundle.yml
app/: config.py  db.py  fetcher.py  models.py  notifier.py  parser.py  scheduler.py  service.py
deploy/: build-release.sh  douyin-feishu-watcher.service  install.sh  run-once.sh  service-logs.sh  service-status.sh
docs/: huoshan-deployment.md
docs/superpowers/plans/: 2026-04-20-douyin-feishu-watcher.md
docs/superpowers/specs/: 2026-04-20-douyin-feishu-subscription-design.md
tests/: conftest.py  test_config.py  test_db.py  test_fetcher.py  test_main.py  test_notifier.py  test_parser.py  test_scheduler.py  test_service.py  test_smoke.py
tests/fixtures/: douyin_creator_page.html
